Fix alignment following font size change

--- a/src/components/OutputPane/OutputPane.scss
+++ b/src/components/OutputPane/OutputPane.scss
@@ -11,12 +11,12 @@
     &__text-group {
   
       &--light {
-        min-height: 1.125rem;
+        min-height: 1.25rem;
         color: #008888;
       } 
   
       &--dark {
-        min-height: 1.125rem;
+        min-height: 1.25rem;
         color: #000044;
       }
     }
